prepare for Java 7